--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'linux'
@@ -80,7 +80,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'windows'
@@ -132,7 +132,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'macos'
