--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'linux'
@@ -43,7 +43,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'linux'
@@ -68,7 +68,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'windows'
@@ -93,7 +93,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'macos'
