--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot ${{ matrix.godot-version }}
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: ${{ matrix.godot-version }}
         platform: 'linux'
@@ -81,7 +81,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: godotengine/godot-ci-action@v1.0.0
+      uses: abarichello/godot-ci@master
       with:
         godot-version: '4.4'
         platform: 'linux'
