--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,11 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: abarichello/godot-ci@master
-      with:
-        godot-version: '4.4'
-        platform: 'linux'
+      run: |
+        wget -q https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_linux.x86_64.zip
+        unzip Godot_v4.4-stable_linux.x86_64.zip
+        sudo mv Godot_v4.4-stable_linux.x86_64 /usr/local/bin/godot
+        sudo chmod +x /usr/local/bin/godot
         
     - name: Create export presets
       run: |
@@ -80,10 +81,11 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: abarichello/godot-ci@master
-      with:
-        godot-version: '4.4'
-        platform: 'windows'
+      run: |
+        Invoke-WebRequest -Uri "https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_win64.exe.zip" -OutFile "godot.zip"
+        Expand-Archive -Path "godot.zip" -DestinationPath "godot"
+        $env:PATH += ";$PWD/godot"
+        echo "$PWD/godot" >> $env:GITHUB_PATH
         
     - name: Create export presets
       run: |
@@ -132,10 +134,11 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: abarichello/godot-ci@master
-      with:
-        godot-version: '4.4'
-        platform: 'macos'
+      run: |
+        curl -L -o godot.zip https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_macos.universal.zip
+        unzip godot.zip
+        sudo mv Godot.app/Contents/MacOS/Godot /usr/local/bin/godot
+        sudo chmod +x /usr/local/bin/godot
         
     - name: Create export presets
       run: |
