--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,11 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: abarichello/godot-ci@master
-      with:
-        godot-version: '4.4'
-        platform: 'linux'
+      run: |
+        wget -q https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_linux.x86_64.zip
+        unzip Godot_v4.4-stable_linux.x86_64.zip
+        sudo mv Godot_v4.4-stable_linux.x86_64 /usr/local/bin/godot
+        sudo chmod +x /usr/local/bin/godot
         
     - name: Run Unit Tests
       run: |
@@ -43,13 +44,15 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: abarichello/godot-ci@master
-      with:
-        godot-version: '4.4'
-        platform: 'linux'
+      run: |
+        wget -q https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_linux.x86_64.zip
+        unzip Godot_v4.4-stable_linux.x86_64.zip
+        sudo mv Godot_v4.4-stable_linux.x86_64 /usr/local/bin/godot
+        sudo chmod +x /usr/local/bin/godot
         
     - name: Export Linux
       run: |
+        mkdir -p build/linux
         godot --headless --export-debug "Linux/X11" build/linux/aarpg.x86_64
         
     - name: Upload Linux Build
@@ -68,13 +71,15 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: abarichello/godot-ci@master
-      with:
-        godot-version: '4.4'
-        platform: 'windows'
+      run: |
+        Invoke-WebRequest -Uri "https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_win64.exe.zip" -OutFile "godot.zip"
+        Expand-Archive -Path "godot.zip" -DestinationPath "godot"
+        $env:PATH += ";$PWD/godot"
+        echo "$PWD/godot" >> $env:GITHUB_PATH
         
     - name: Export Windows
       run: |
+        mkdir -p build/windows
         godot --headless --export-debug "Windows Desktop" build/windows/aarpg.exe
         
     - name: Upload Windows Build
@@ -93,13 +98,15 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Setup Godot
-      uses: abarichello/godot-ci@master
-      with:
-        godot-version: '4.4'
-        platform: 'macos'
+      run: |
+        curl -L -o godot.zip https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_macos.universal.zip
+        unzip godot.zip
+        sudo mv Godot.app/Contents/MacOS/Godot /usr/local/bin/godot
+        sudo chmod +x /usr/local/bin/godot
         
     - name: Export macOS
       run: |
+        mkdir -p build/macos
         godot --headless --export-debug "macOS" build/macos/aarpg.app
         
     - name: Upload macOS Build
