--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,72 +9,15 @@ on:
       platform:
         description: 'Platform to build for'
         required: true
-        default: 'all'
+        default: 'windows'
         type: choice
         options:
-        - all
-        - linux
         - windows
-        - macos
 
 jobs:
-  build-linux:
-    name: Build Linux
-    runs-on: ubuntu-latest
-    if: github.event.inputs.platform == 'all' || github.event.inputs.platform == 'linux' || github.event.inputs.platform == ''
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Godot
-      run: |
-        wget -q https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_linux.x86_64.zip
-        unzip Godot_v4.4-stable_linux.x86_64.zip
-        sudo mv Godot_v4.4-stable_linux.x86_64 /usr/local/bin/godot
-        sudo chmod +x /usr/local/bin/godot
-        
-    - name: Create export presets
-      run: |
-        mkdir -p .godot/export_presets.cfg
-        cat > .godot/export_presets.cfg << 'EOF'
-        [preset.0]
-        name="Linux/X11"
-        platform="Linux/X11"
-        runnable=true
-        export_path="build/linux/aarpg.x86_64"
-        [preset.1]
-        name="Linux/X11 (Debug)"
-        platform="Linux/X11"
-        runnable=true
-        export_path="build/linux/aarpg_debug.x86_64"
-        debug=true
-        EOF
-        
-    - name: Export Linux Debug
-      run: |
-        mkdir -p build/linux
-        godot --headless --export-debug "Linux/X11" build/linux/aarpg_debug.x86_64
-        
-    - name: Export Linux Release
-      run: |
-        godot --headless --export-release "Linux/X11" build/linux/aarpg.x86_64
-        
-    - name: Create Linux Archive
-      run: |
-        cd build/linux
-        tar -czf aarpg-linux.tar.gz *
-        
-    - name: Upload Linux Build
-      uses: actions/upload-artifact@v4
-      with:
-        name: linux-build
-        path: build/linux/
-
   build-windows:
     name: Build Windows
     runs-on: windows-latest
-    if: github.event.inputs.platform == 'all' || github.event.inputs.platform == 'windows' || github.event.inputs.platform == ''
     
     steps:
     - name: Checkout code
@@ -124,83 +67,18 @@ jobs:
         name: windows-build
         path: build/windows/
 
-  build-macos:
-    name: Build macOS
-    runs-on: macos-latest
-    if: github.event.inputs.platform == 'all' || github.event.inputs.platform == 'macos' || github.event.inputs.platform == ''
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Godot
-      run: |
-        curl -L -o godot.zip https://downloads.tuxfamily.org/godotengine/4.4/Godot_v4.4-stable_macos.universal.zip
-        unzip godot.zip
-        sudo mv Godot.app/Contents/MacOS/Godot /usr/local/bin/godot
-        sudo chmod +x /usr/local/bin/godot
-        
-    - name: Create export presets
-      run: |
-        mkdir -p .godot/export_presets.cfg
-        cat > .godot/export_presets.cfg << 'EOF'
-        [preset.0]
-        name="macOS"
-        platform="macOS"
-        runnable=true
-        export_path="build/macos/aarpg.app"
-        [preset.1]
-        name="macOS (Debug)"
-        platform="macOS"
-        runnable=true
-        export_path="build/macos/aarpg_debug.app"
-        debug=true
-        EOF
-        
-    - name: Export macOS Debug
-      run: |
-        mkdir -p build/macos
-        godot --headless --export-debug "macOS" build/macos/aarpg_debug.app
-        
-    - name: Export macOS Release
-      run: |
-        godot --headless --export-release "macOS" build/macos/aarpg.app
-        
-    - name: Create macOS Archive
-      run: |
-        cd build/macos
-        zip -r aarpg-macos.zip *
-        
-    - name: Upload macOS Build
-      uses: actions/upload-artifact@v4
-      with:
-        name: macos-build
-        path: build/macos/
-
   create-release:
     name: Create Release
-    runs-on: ubuntu-latest
-    needs: [build-linux, build-windows, build-macos]
+    runs-on: windows-latest
+    needs: [build-windows]
     if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
-    - name: Download Linux Build
-      uses: actions/download-artifact@v4
-      with:
-        name: linux-build
-        path: linux-build/
-        
     - name: Download Windows Build
       uses: actions/download-artifact@v4
       with:
         name: windows-build
         path: windows-build/
-        
-    - name: Download macOS Build
-      uses: actions/download-artifact@v4
-      with:
-        name: macos-build
-        path: macos-build/
         
     - name: Create Release
       uses: softprops/action-gh-release@v1
@@ -211,21 +89,17 @@ jobs:
           ## Pantheos 4C - ${{ github.ref_name }}
           
           ### Downloads
-          - **Linux**: `aarpg-linux.tar.gz`
           - **Windows**: `aarpg-windows.zip`
-          - **macOS**: `aarpg-macos.zip`
           
           ### Changes
           See commit history for detailed changes.
           
           ### Installation
-          1. Download the appropriate file for your platform
+          1. Download the Windows build
           2. Extract the archive
-          3. Run the executable
+          3. Run aarpg.exe
         files: |
-          linux-build/*
           windows-build/*
-          macos-build/*
         draft: false
         prerelease: false
       env:
